--- a/.github/workflows/main_api.yml
+++ b/.github/workflows/main_api.yml
@@ -35,7 +35,7 @@ jobs:
       
       - name: Add database with dotnet
         run: |
-          dotnet tool install --global dotnet-ef
+          dotnet tool install --global dotnet-ef --version 6.0.6 
           dotnet tool restore
           dotnet ef database update
 
