--- a/.github/workflows/main_api.yml
+++ b/.github/workflows/main_api.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           dotnet tool install --global dotnet-ef --version 6.0.6 
           dotnet tool restore
-          dotnet ef database update
+          dotnet ef database update -p Api --connection '${{ secrets.DBConnection }}'
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/Api
