--- a/.github/workflows/main_api.yml
+++ b/.github/workflows/main_api.yml
@@ -35,9 +35,9 @@ jobs:
       
       - name: Add database with dotnet
         run: |
-          dotnet tool install --global dotnet-ef --version 6.0.6 
+          dotnet tool install --global dotnet-ef --version 6.0.28 
           dotnet tool restore
-          dotnet ef database update -p Api --connection '${{ secrets.DBConnection }}'
+          dotnet ef database update --connection '${{ secrets.DBConnection }}'
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/Api
