--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,15 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "Spotify": {
-    "Username": "domshyra"
-  },
-  "ApplicationInsights": {
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"Spotify": {
+		"Username": "domshyra"
+	},
+	"ConnectionStrings": {
+		"PlaylistDB": "in-azure-config"
+	},
+	"ApplicationInsights": {
 		"ConnectionString": "InstrumentationKey=039bd167-8ba5-4618-bd04-1e76c4019cba;IngestionEndpoint=https://westus-0.in.applicationinsights.azure.com/;LiveEndpoint=https://westus.livediagnostics.monitor.azure.com/"
-  }
+	}
 }
