--- a/.github/workflows/main_api.yml
+++ b/.github/workflows/main_api.yml
@@ -11,7 +11,6 @@ on:
       - Api/**
   workflow_dispatch:
 
-# https://learn.microsoft.com/en-us/azure/azure-sql/database/connect-github-actions-sql-db?view=azuresql&tabs=userlevel
 jobs:
   build:
     runs-on: windows-latest
@@ -23,10 +22,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
       - run: ls
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
@@ -37,12 +32,10 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
         
-      
-      - name: Add database with dotnet
-        run: |
-          dotnet tool install --global dotnet-ef --version 6.0.28 
-          dotnet tool restore
-          dotnet ef database update --connection '${{ secrets.AZURE_SQL_CONNECTION_STRING }}' -- --environment Production
+      - name: Replace tokens
+        uses: cschleiden/replace-tokens@v1.3
+        with:
+          files: appsettings.json
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/Api
