--- a/.github/workflows/main_db.yml
+++ b/.github/workflows/main_db.yml
@@ -38,10 +38,12 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
         
-      - name: Replace tokens
-        uses: cschleiden/replace-tokens@v1.3
+      - name: App Settings Variable Substitution
+        uses: microsoft/variable-substitution@v1
         with:
-          files: appsettings.json
+          files: '${{env.DOTNET_ROOT}}/Api/appsettings.json'
+        env:
+          ConnectionStrings.PlaylistDB: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
       
       - name: Add database with dotnet
         run: |
