--- a/.github/workflows/main_api.yml
+++ b/.github/workflows/main_api.yml
@@ -32,10 +32,12 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
         
-      - name: Replace tokens
-        uses: cschleiden/replace-tokens@v1.3
+      - name: App Settings Variable Substitution
+        uses: microsoft/variable-substitution@v1
         with:
-          files: appsettings.json
+          files: '${{env.DOTNET_ROOT}}/Api/appsettings.json'
+        env:
+          ConnectionStrings.PlaylistDB: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/Api
