--- a/Web/package.json
+++ b/Web/package.json
@@ -17,6 +17,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
+		"fast-json-patch": "^3.1.1",
 		"prettier": "^2.8.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
