--- a/Web/package.json
+++ b/Web/package.json
@@ -26,6 +26,7 @@
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.22.0",
 		"react-scripts": "5.0.1",
+		"uuid": "^9.0.1",
 		"web-vitals": "^2.1.4",
 		"workbox-background-sync": "^6.6.0",
 		"workbox-broadcast-update": "^6.6.0",
