--- a/Web/package.json
+++ b/Web/package.json
@@ -15,6 +15,7 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"dayjs": "^1.11.10",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"fast-json-patch": "^3.1.1",
