--- a/Web/package.json
+++ b/Web/package.json
@@ -18,6 +18,7 @@
 		"dayjs": "^1.11.10",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
+		"fast-deep-equal": "^3.1.3",
 		"fast-json-patch": "^3.1.1",
 		"prettier": "^2.8.0",
 		"prop-types": "^15.8.1",
