--- a/Web/public/manifest.json
+++ b/Web/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "Playlists",
-  "name": "my playlists from spotify",
-  "icons": [
+	"short_name": "OfflinePOC",
+	"name": "A PWA for offline testing",
+	"icons": [
 		{
 			"src": "favicon-32x32.ico",
 			"sizes": "32x32",
@@ -22,9 +22,9 @@
 			"type": "image/png",
 			"sizes": "512x512"
 		}
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+	],
+	"start_url": ".",
+	"display": "standalone",
+	"theme_color": "#000000",
+	"background_color": "#ffffff"
 }
